// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Plugin index should render carusel inside plugin 1`] = `
<PluginWrapper
  disableCarusel={false}
  elements={
    Array [
      Object {
        "elements": Array [
          Object {
            "id": "Uk4tPy1h2",
            "type": "IMAGE",
            "url": "https://picsum.photos/300/150",
          },
          Object {
            "id": "Ck4tPy1h3",
            "text": "Hello!",
            "type": "TITLE",
          },
          Object {
            "id": "Ek4tPy1h1",
            "text": "Lorem Impsum...",
            "type": "TEXT",
          },
          Object {
            "id": "Nkm0hRAiE",
            "postback": "click-on-button-1",
            "text": "Click me!",
            "type": "BUTTON",
          },
          Object {
            "id": "NkGJ6CAiN",
            "postback": "click-on-button-2",
            "text": "No click me!",
            "type": "BUTTON",
          },
          Object {
            "id": "EyCyTRCi4",
            "postback": "click-on-button-3",
            "text": "Aww don\`t click on me",
            "type": "BUTTON",
          },
        ],
        "id": "Ek4tPy1h4",
        "type": "MENU",
      },
      Object {
        "elements": Array [
          Object {
            "id": "aUk4tPy1h2",
            "type": "IMAGE",
            "url": "https://picsum.photos/300/150",
          },
          Object {
            "id": "aCk4tPy1h3",
            "text": "Hello!",
            "type": "TITLE",
          },
          Object {
            "id": "aEk4tPy1h1",
            "text": "Lorem Impsum...",
            "type": "TEXT",
          },
          Object {
            "id": "aNkm0hRAiE",
            "postback": "click-on-button-1",
            "text": "Click me!",
            "type": "BUTTON",
          },
          Object {
            "id": "aNkGJ6CAiN",
            "postback": "click-on-button-2",
            "text": "No click me!",
            "type": "BUTTON",
          },
          Object {
            "id": "aEyCyTRCi4",
            "postback": "click-on-button-3",
            "text": "Aww don\`t click on me",
            "type": "BUTTON",
          },
        ],
        "id": "aEk4tPy1h5",
        "type": "MENU",
      },
      Object {
        "elements": Array [
          Object {
            "id": "bUk4tPy1h2",
            "type": "IMAGE",
            "url": "https://picsum.photos/300/150",
          },
          Object {
            "id": "bCk4tPy1h3",
            "text": "Hello!",
            "type": "TITLE",
          },
          Object {
            "id": "bEk4tPy1h1",
            "text": "Lorem Impsum...",
            "type": "TEXT",
          },
          Object {
            "id": "bNkm0hRAiE",
            "postback": "click-on-button-1",
            "text": "Click me!",
            "type": "BUTTON",
          },
          Object {
            "id": "bNkGJ6CAiN",
            "postback": "click-on-button-2",
            "text": "No click me!",
            "type": "BUTTON",
          },
          Object {
            "id": "bEyCyTRCi4",
            "postback": "click-on-button-3",
            "text": "Aww don\`t click on me",
            "type": "BUTTON",
          },
        ],
        "id": "bEk4tPy1h6",
        "type": "MENU",
      },
    ]
  }
  hideButtons={false}
  onClick={[Function]}
>
  <Carusel
    elements={
      Array [
        Object {
          "elements": Array [
            Object {
              "id": "Uk4tPy1h2",
              "type": "IMAGE",
              "url": "https://picsum.photos/300/150",
            },
            Object {
              "id": "Ck4tPy1h3",
              "text": "Hello!",
              "type": "TITLE",
            },
            Object {
              "id": "Ek4tPy1h1",
              "text": "Lorem Impsum...",
              "type": "TEXT",
            },
            Object {
              "id": "Nkm0hRAiE",
              "postback": "click-on-button-1",
              "text": "Click me!",
              "type": "BUTTON",
            },
            Object {
              "id": "NkGJ6CAiN",
              "postback": "click-on-button-2",
              "text": "No click me!",
              "type": "BUTTON",
            },
            Object {
              "id": "EyCyTRCi4",
              "postback": "click-on-button-3",
              "text": "Aww don\`t click on me",
              "type": "BUTTON",
            },
          ],
          "id": "Ek4tPy1h4",
          "type": "MENU",
        },
        Object {
          "elements": Array [
            Object {
              "id": "aUk4tPy1h2",
              "type": "IMAGE",
              "url": "https://picsum.photos/300/150",
            },
            Object {
              "id": "aCk4tPy1h3",
              "text": "Hello!",
              "type": "TITLE",
            },
            Object {
              "id": "aEk4tPy1h1",
              "text": "Lorem Impsum...",
              "type": "TEXT",
            },
            Object {
              "id": "aNkm0hRAiE",
              "postback": "click-on-button-1",
              "text": "Click me!",
              "type": "BUTTON",
            },
            Object {
              "id": "aNkGJ6CAiN",
              "postback": "click-on-button-2",
              "text": "No click me!",
              "type": "BUTTON",
            },
            Object {
              "id": "aEyCyTRCi4",
              "postback": "click-on-button-3",
              "text": "Aww don\`t click on me",
              "type": "BUTTON",
            },
          ],
          "id": "aEk4tPy1h5",
          "type": "MENU",
        },
        Object {
          "elements": Array [
            Object {
              "id": "bUk4tPy1h2",
              "type": "IMAGE",
              "url": "https://picsum.photos/300/150",
            },
            Object {
              "id": "bCk4tPy1h3",
              "text": "Hello!",
              "type": "TITLE",
            },
            Object {
              "id": "bEk4tPy1h1",
              "text": "Lorem Impsum...",
              "type": "TEXT",
            },
            Object {
              "id": "bNkm0hRAiE",
              "postback": "click-on-button-1",
              "text": "Click me!",
              "type": "BUTTON",
            },
            Object {
              "id": "bNkGJ6CAiN",
              "postback": "click-on-button-2",
              "text": "No click me!",
              "type": "BUTTON",
            },
            Object {
              "id": "bEyCyTRCi4",
              "postback": "click-on-button-3",
              "text": "Aww don\`t click on me",
              "type": "BUTTON",
            },
          ],
          "id": "bEk4tPy1h6",
          "type": "MENU",
        },
      ]
    }
    hideButtons={false}
    onClick={[Function]}
  >
    <div>
      <div>
        <div
          onMouseDown={[Function]}
        />
      </div>
      <div>
        <ResizeDetector
          handleHeight={false}
          handleWidth={false}
          onResize={[Function]}
          refreshRate={1000}
          resizableElementId=""
          skipOnMount={false}
        >
          <div
            style={
              Object {
                "display": "none",
                "height": 0,
                "position": "absolute",
                "visibility": "hidden",
                "width": 0,
              }
            }
          />
        </ResizeDetector>
        <CaruselItems
          elements={
            Array [
              Object {
                "elements": Array [
                  Object {
                    "id": "Uk4tPy1h2",
                    "type": "IMAGE",
                    "url": "https://picsum.photos/300/150",
                  },
                  Object {
                    "id": "Ck4tPy1h3",
                    "text": "Hello!",
                    "type": "TITLE",
                  },
                  Object {
                    "id": "Ek4tPy1h1",
                    "text": "Lorem Impsum...",
                    "type": "TEXT",
                  },
                  Object {
                    "id": "Nkm0hRAiE",
                    "postback": "click-on-button-1",
                    "text": "Click me!",
                    "type": "BUTTON",
                  },
                  Object {
                    "id": "NkGJ6CAiN",
                    "postback": "click-on-button-2",
                    "text": "No click me!",
                    "type": "BUTTON",
                  },
                  Object {
                    "id": "EyCyTRCi4",
                    "postback": "click-on-button-3",
                    "text": "Aww don\`t click on me",
                    "type": "BUTTON",
                  },
                ],
                "id": "Ek4tPy1h4",
                "type": "MENU",
              },
              Object {
                "elements": Array [
                  Object {
                    "id": "aUk4tPy1h2",
                    "type": "IMAGE",
                    "url": "https://picsum.photos/300/150",
                  },
                  Object {
                    "id": "aCk4tPy1h3",
                    "text": "Hello!",
                    "type": "TITLE",
                  },
                  Object {
                    "id": "aEk4tPy1h1",
                    "text": "Lorem Impsum...",
                    "type": "TEXT",
                  },
                  Object {
                    "id": "aNkm0hRAiE",
                    "postback": "click-on-button-1",
                    "text": "Click me!",
                    "type": "BUTTON",
                  },
                  Object {
                    "id": "aNkGJ6CAiN",
                    "postback": "click-on-button-2",
                    "text": "No click me!",
                    "type": "BUTTON",
                  },
                  Object {
                    "id": "aEyCyTRCi4",
                    "postback": "click-on-button-3",
                    "text": "Aww don\`t click on me",
                    "type": "BUTTON",
                  },
                ],
                "id": "aEk4tPy1h5",
                "type": "MENU",
              },
              Object {
                "elements": Array [
                  Object {
                    "id": "bUk4tPy1h2",
                    "type": "IMAGE",
                    "url": "https://picsum.photos/300/150",
                  },
                  Object {
                    "id": "bCk4tPy1h3",
                    "text": "Hello!",
                    "type": "TITLE",
                  },
                  Object {
                    "id": "bEk4tPy1h1",
                    "text": "Lorem Impsum...",
                    "type": "TEXT",
                  },
                  Object {
                    "id": "bNkm0hRAiE",
                    "postback": "click-on-button-1",
                    "text": "Click me!",
                    "type": "BUTTON",
                  },
                  Object {
                    "id": "bNkGJ6CAiN",
                    "postback": "click-on-button-2",
                    "text": "No click me!",
                    "type": "BUTTON",
                  },
                  Object {
                    "id": "bEyCyTRCi4",
                    "postback": "click-on-button-3",
                    "text": "Aww don\`t click on me",
                    "type": "BUTTON",
                  },
                ],
                "id": "bEk4tPy1h6",
                "type": "MENU",
              },
            ]
          }
          handleChangeIndex={[Function]}
          hideButtons={false}
          index={0}
          onClick={[Function]}
        >
          <ReactSwipableView
            animateHeight={false}
            animateTransitions={true}
            axis="x"
            disableLazyLoading={false}
            disabled={false}
            enableMouseEvents={false}
            hysteresis={0.6}
            ignoreNativeScroll={false}
            index={0}
            onChangeIndex={[Function]}
            resistance={false}
            springConfig={
              Object {
                "delay": "0s",
                "duration": "0.35s",
                "easeFunction": "cubic-bezier(0.15, 0.3, 0.25, 1)",
              }
            }
            threshold={5}
          >
            <div
              onScroll={[Function]}
              onTouchEnd={[Function]}
              onTouchStart={[Function]}
              style={
                Object {
                  "overflowX": "hidden",
                }
              }
            >
              <div
                className="react-swipeable-view-container"
                style={
                  Object {
                    "WebkitFlexDirection": "row",
                    "WebkitTransform": "translate(0%, 0)",
                    "WebkitTransition": "all 0s ease 0s",
                    "direction": "ltr",
                    "display": "flex",
                    "flexDirection": "row",
                    "height": null,
                    "transform": "translate(0%, 0)",
                    "transition": "all 0s ease 0s",
                    "willChange": "transform",
                  }
                }
              >
                <div
                  aria-hidden={false}
                  data-swipeable="true"
                  key=".$Ek4tPy1h4"
                  style={
                    Object {
                      "WebkitFlexShrink": 0,
                      "flexShrink": 0,
                      "overflow": "auto",
                      "width": "100%",
                    }
                  }
                >
                  <div
                    key="Ek4tPy1h4"
                  >
                    <ComposedElement
                      elements={
                        Array [
                          Object {
                            "id": "Uk4tPy1h2",
                            "type": "IMAGE",
                            "url": "https://picsum.photos/300/150",
                          },
                          Object {
                            "id": "Ck4tPy1h3",
                            "text": "Hello!",
                            "type": "TITLE",
                          },
                          Object {
                            "id": "Ek4tPy1h1",
                            "text": "Lorem Impsum...",
                            "type": "TEXT",
                          },
                          Object {
                            "id": "Nkm0hRAiE",
                            "postback": "click-on-button-1",
                            "text": "Click me!",
                            "type": "BUTTON",
                          },
                          Object {
                            "id": "NkGJ6CAiN",
                            "postback": "click-on-button-2",
                            "text": "No click me!",
                            "type": "BUTTON",
                          },
                          Object {
                            "id": "EyCyTRCi4",
                            "postback": "click-on-button-3",
                            "text": "Aww don\`t click on me",
                            "type": "BUTTON",
                          },
                        ]
                      }
                      hideButtons={false}
                      onClick={[Function]}
                    >
                      <div>
                        <Element
                          hideButtons={false}
                          id="Uk4tPy1h2"
                          key="Uk4tPy1h2"
                          onClick={[Function]}
                          standalone={false}
                          type="IMAGE"
                          url="https://picsum.photos/300/150"
                        >
                          <Image
                            src="https://picsum.photos/300/150"
                          >
                            <div>
                              <div>
                                <img
                                  src="https://picsum.photos/300/150"
                                />
                              </div>
                            </div>
                          </Image>
                        </Element>
                        <Element
                          hideButtons={false}
                          id="Ck4tPy1h3"
                          key="Ck4tPy1h3"
                          onClick={[Function]}
                          standalone={false}
                          text="Hello!"
                          type="TITLE"
                        >
                          <Heading
                            content="Hello!"
                            level={1}
                          >
                            <h1>
                              Hello!
                            </h1>
                          </Heading>
                        </Element>
                        <Element
                          hideButtons={false}
                          id="Ek4tPy1h1"
                          key="Ek4tPy1h1"
                          onClick={[Function]}
                          standalone={false}
                          text="Lorem Impsum..."
                          type="TEXT"
                        >
                          <Text
                            content="Lorem Impsum..."
                          >
                            <p>
                              Lorem Impsum...
                            </p>
                          </Text>
                        </Element>
                        <Element
                          hideButtons={false}
                          id="Nkm0hRAiE"
                          key="Nkm0hRAiE"
                          onClick={[Function]}
                          postback="click-on-button-1"
                          standalone={false}
                          text="Click me!"
                          type="BUTTON"
                        >
                          <Button
                            hideButtons={false}
                            id="Nkm0hRAiE"
                            label="Click me!"
                            onClick={[Function]}
                            postback="click-on-button-1"
                            standalone={false}
                            text="Click me!"
                            type="BUTTON"
                          >
                            <div>
                              <button
                                onClick={[Function]}
                                title="Click me!"
                              >
                                Click me!
                              </button>
                            </div>
                          </Button>
                        </Element>
                        <Element
                          hideButtons={false}
                          id="NkGJ6CAiN"
                          key="NkGJ6CAiN"
                          onClick={[Function]}
                          postback="click-on-button-2"
                          standalone={false}
                          text="No click me!"
                          type="BUTTON"
                        >
                          <Button
                            hideButtons={false}
                            id="NkGJ6CAiN"
                            label="No click me!"
                            onClick={[Function]}
                            postback="click-on-button-2"
                            standalone={false}
                            text="No click me!"
                            type="BUTTON"
                          >
                            <div>
                              <button
                                onClick={[Function]}
                                title="No click me!"
                              >
                                No click me!
                              </button>
                            </div>
                          </Button>
                        </Element>
                        <Element
                          hideButtons={false}
                          id="EyCyTRCi4"
                          key="EyCyTRCi4"
                          onClick={[Function]}
                          postback="click-on-button-3"
                          standalone={false}
                          text="Aww don\`t click on me"
                          type="BUTTON"
                        >
                          <Button
                            hideButtons={false}
                            id="EyCyTRCi4"
                            label="Aww don\`t click on me"
                            onClick={[Function]}
                            postback="click-on-button-3"
                            standalone={false}
                            text="Aww don\`t click on me"
                            type="BUTTON"
                          >
                            <div>
                              <button
                                onClick={[Function]}
                                title="Aww don\`t click on me"
                              >
                                Aww don\`t click on me
                              </button>
                            </div>
                          </Button>
                        </Element>
                      </div>
                    </ComposedElement>
                  </div>
                </div>
                <div
                  aria-hidden={true}
                  data-swipeable="true"
                  key=".$aEk4tPy1h5"
                  style={
                    Object {
                      "WebkitFlexShrink": 0,
                      "flexShrink": 0,
                      "overflow": "auto",
                      "width": "100%",
                    }
                  }
                >
                  <div
                    key="aEk4tPy1h5"
                  >
                    <ComposedElement
                      elements={
                        Array [
                          Object {
                            "id": "aUk4tPy1h2",
                            "type": "IMAGE",
                            "url": "https://picsum.photos/300/150",
                          },
                          Object {
                            "id": "aCk4tPy1h3",
                            "text": "Hello!",
                            "type": "TITLE",
                          },
                          Object {
                            "id": "aEk4tPy1h1",
                            "text": "Lorem Impsum...",
                            "type": "TEXT",
                          },
                          Object {
                            "id": "aNkm0hRAiE",
                            "postback": "click-on-button-1",
                            "text": "Click me!",
                            "type": "BUTTON",
                          },
                          Object {
                            "id": "aNkGJ6CAiN",
                            "postback": "click-on-button-2",
                            "text": "No click me!",
                            "type": "BUTTON",
                          },
                          Object {
                            "id": "aEyCyTRCi4",
                            "postback": "click-on-button-3",
                            "text": "Aww don\`t click on me",
                            "type": "BUTTON",
                          },
                        ]
                      }
                      hideButtons={false}
                      onClick={[Function]}
                    >
                      <div>
                        <Element
                          hideButtons={false}
                          id="aUk4tPy1h2"
                          key="aUk4tPy1h2"
                          onClick={[Function]}
                          standalone={false}
                          type="IMAGE"
                          url="https://picsum.photos/300/150"
                        >
                          <Image
                            src="https://picsum.photos/300/150"
                          >
                            <div>
                              <div>
                                <img
                                  src="https://picsum.photos/300/150"
                                />
                              </div>
                            </div>
                          </Image>
                        </Element>
                        <Element
                          hideButtons={false}
                          id="aCk4tPy1h3"
                          key="aCk4tPy1h3"
                          onClick={[Function]}
                          standalone={false}
                          text="Hello!"
                          type="TITLE"
                        >
                          <Heading
                            content="Hello!"
                            level={1}
                          >
                            <h1>
                              Hello!
                            </h1>
                          </Heading>
                        </Element>
                        <Element
                          hideButtons={false}
                          id="aEk4tPy1h1"
                          key="aEk4tPy1h1"
                          onClick={[Function]}
                          standalone={false}
                          text="Lorem Impsum..."
                          type="TEXT"
                        >
                          <Text
                            content="Lorem Impsum..."
                          >
                            <p>
                              Lorem Impsum...
                            </p>
                          </Text>
                        </Element>
                        <Element
                          hideButtons={false}
                          id="aNkm0hRAiE"
                          key="aNkm0hRAiE"
                          onClick={[Function]}
                          postback="click-on-button-1"
                          standalone={false}
                          text="Click me!"
                          type="BUTTON"
                        >
                          <Button
                            hideButtons={false}
                            id="aNkm0hRAiE"
                            label="Click me!"
                            onClick={[Function]}
                            postback="click-on-button-1"
                            standalone={false}
                            text="Click me!"
                            type="BUTTON"
                          >
                            <div>
                              <button
                                onClick={[Function]}
                                title="Click me!"
                              >
                                Click me!
                              </button>
                            </div>
                          </Button>
                        </Element>
                        <Element
                          hideButtons={false}
                          id="aNkGJ6CAiN"
                          key="aNkGJ6CAiN"
                          onClick={[Function]}
                          postback="click-on-button-2"
                          standalone={false}
                          text="No click me!"
                          type="BUTTON"
                        >
                          <Button
                            hideButtons={false}
                            id="aNkGJ6CAiN"
                            label="No click me!"
                            onClick={[Function]}
                            postback="click-on-button-2"
                            standalone={false}
                            text="No click me!"
                            type="BUTTON"
                          >
                            <div>
                              <button
                                onClick={[Function]}
                                title="No click me!"
                              >
                                No click me!
                              </button>
                            </div>
                          </Button>
                        </Element>
                        <Element
                          hideButtons={false}
                          id="aEyCyTRCi4"
                          key="aEyCyTRCi4"
                          onClick={[Function]}
                          postback="click-on-button-3"
                          standalone={false}
                          text="Aww don\`t click on me"
                          type="BUTTON"
                        >
                          <Button
                            hideButtons={false}
                            id="aEyCyTRCi4"
                            label="Aww don\`t click on me"
                            onClick={[Function]}
                            postback="click-on-button-3"
                            standalone={false}
                            text="Aww don\`t click on me"
                            type="BUTTON"
                          >
                            <div>
                              <button
                                onClick={[Function]}
                                title="Aww don\`t click on me"
                              >
                                Aww don\`t click on me
                              </button>
                            </div>
                          </Button>
                        </Element>
                      </div>
                    </ComposedElement>
                  </div>
                </div>
                <div
                  aria-hidden={true}
                  data-swipeable="true"
                  key=".$bEk4tPy1h6"
                  style={
                    Object {
                      "WebkitFlexShrink": 0,
                      "flexShrink": 0,
                      "overflow": "auto",
                      "width": "100%",
                    }
                  }
                >
                  <div
                    key="bEk4tPy1h6"
                  >
                    <ComposedElement
                      elements={
                        Array [
                          Object {
                            "id": "bUk4tPy1h2",
                            "type": "IMAGE",
                            "url": "https://picsum.photos/300/150",
                          },
                          Object {
                            "id": "bCk4tPy1h3",
                            "text": "Hello!",
                            "type": "TITLE",
                          },
                          Object {
                            "id": "bEk4tPy1h1",
                            "text": "Lorem Impsum...",
                            "type": "TEXT",
                          },
                          Object {
                            "id": "bNkm0hRAiE",
                            "postback": "click-on-button-1",
                            "text": "Click me!",
                            "type": "BUTTON",
                          },
                          Object {
                            "id": "bNkGJ6CAiN",
                            "postback": "click-on-button-2",
                            "text": "No click me!",
                            "type": "BUTTON",
                          },
                          Object {
                            "id": "bEyCyTRCi4",
                            "postback": "click-on-button-3",
                            "text": "Aww don\`t click on me",
                            "type": "BUTTON",
                          },
                        ]
                      }
                      hideButtons={false}
                      onClick={[Function]}
                    >
                      <div>
                        <Element
                          hideButtons={false}
                          id="bUk4tPy1h2"
                          key="bUk4tPy1h2"
                          onClick={[Function]}
                          standalone={false}
                          type="IMAGE"
                          url="https://picsum.photos/300/150"
                        >
                          <Image
                            src="https://picsum.photos/300/150"
                          >
                            <div>
                              <div>
                                <img
                                  src="https://picsum.photos/300/150"
                                />
                              </div>
                            </div>
                          </Image>
                        </Element>
                        <Element
                          hideButtons={false}
                          id="bCk4tPy1h3"
                          key="bCk4tPy1h3"
                          onClick={[Function]}
                          standalone={false}
                          text="Hello!"
                          type="TITLE"
                        >
                          <Heading
                            content="Hello!"
                            level={1}
                          >
                            <h1>
                              Hello!
                            </h1>
                          </Heading>
                        </Element>
                        <Element
                          hideButtons={false}
                          id="bEk4tPy1h1"
                          key="bEk4tPy1h1"
                          onClick={[Function]}
                          standalone={false}
                          text="Lorem Impsum..."
                          type="TEXT"
                        >
                          <Text
                            content="Lorem Impsum..."
                          >
                            <p>
                              Lorem Impsum...
                            </p>
                          </Text>
                        </Element>
                        <Element
                          hideButtons={false}
                          id="bNkm0hRAiE"
                          key="bNkm0hRAiE"
                          onClick={[Function]}
                          postback="click-on-button-1"
                          standalone={false}
                          text="Click me!"
                          type="BUTTON"
                        >
                          <Button
                            hideButtons={false}
                            id="bNkm0hRAiE"
                            label="Click me!"
                            onClick={[Function]}
                            postback="click-on-button-1"
                            standalone={false}
                            text="Click me!"
                            type="BUTTON"
                          >
                            <div>
                              <button
                                onClick={[Function]}
                                title="Click me!"
                              >
                                Click me!
                              </button>
                            </div>
                          </Button>
                        </Element>
                        <Element
                          hideButtons={false}
                          id="bNkGJ6CAiN"
                          key="bNkGJ6CAiN"
                          onClick={[Function]}
                          postback="click-on-button-2"
                          standalone={false}
                          text="No click me!"
                          type="BUTTON"
                        >
                          <Button
                            hideButtons={false}
                            id="bNkGJ6CAiN"
                            label="No click me!"
                            onClick={[Function]}
                            postback="click-on-button-2"
                            standalone={false}
                            text="No click me!"
                            type="BUTTON"
                          >
                            <div>
                              <button
                                onClick={[Function]}
                                title="No click me!"
                              >
                                No click me!
                              </button>
                            </div>
                          </Button>
                        </Element>
                        <Element
                          hideButtons={false}
                          id="bEyCyTRCi4"
                          key="bEyCyTRCi4"
                          onClick={[Function]}
                          postback="click-on-button-3"
                          standalone={false}
                          text="Aww don\`t click on me"
                          type="BUTTON"
                        >
                          <Button
                            hideButtons={false}
                            id="bEyCyTRCi4"
                            label="Aww don\`t click on me"
                            onClick={[Function]}
                            postback="click-on-button-3"
                            standalone={false}
                            text="Aww don\`t click on me"
                            type="BUTTON"
                          >
                            <div>
                              <button
                                onClick={[Function]}
                                title="Aww don\`t click on me"
                              >
                                Aww don\`t click on me
                              </button>
                            </div>
                          </Button>
                        </Element>
                      </div>
                    </ComposedElement>
                  </div>
                </div>
              </div>
            </div>
          </ReactSwipableView>
        </CaruselItems>
      </div>
      <div>
        <div
          onMouseDown={[Function]}
        />
      </div>
    </div>
  </Carusel>
</PluginWrapper>
`;

exports[`Plugin index should render gallery inside plugin 1`] = `
<PluginWrapper
  disableCarusel={true}
  elements={
    Array [
      Object {
        "elements": Array [
          Object {
            "id": "Uk4tPy1h2",
            "type": "IMAGE",
            "url": "https://picsum.photos/300/150",
          },
          Object {
            "id": "Ck4tPy1h3",
            "text": "Hello!",
            "type": "TITLE",
          },
          Object {
            "id": "Ek4tPy1h1",
            "text": "Lorem Impsum...",
            "type": "TEXT",
          },
          Object {
            "id": "Nkm0hRAiE",
            "postback": "click-on-button-1",
            "text": "Click me!",
            "type": "BUTTON",
          },
          Object {
            "id": "NkGJ6CAiN",
            "postback": "click-on-button-2",
            "text": "No click me!",
            "type": "BUTTON",
          },
          Object {
            "id": "EyCyTRCi4",
            "postback": "click-on-button-3",
            "text": "Aww don\`t click on me",
            "type": "BUTTON",
          },
        ],
        "id": "Ek4tPy1h4",
        "type": "MENU",
      },
      Object {
        "elements": Array [
          Object {
            "id": "aUk4tPy1h2",
            "type": "IMAGE",
            "url": "https://picsum.photos/300/150",
          },
          Object {
            "id": "aCk4tPy1h3",
            "text": "Hello!",
            "type": "TITLE",
          },
          Object {
            "id": "aEk4tPy1h1",
            "text": "Lorem Impsum...",
            "type": "TEXT",
          },
          Object {
            "id": "aNkm0hRAiE",
            "postback": "click-on-button-1",
            "text": "Click me!",
            "type": "BUTTON",
          },
          Object {
            "id": "aNkGJ6CAiN",
            "postback": "click-on-button-2",
            "text": "No click me!",
            "type": "BUTTON",
          },
          Object {
            "id": "aEyCyTRCi4",
            "postback": "click-on-button-3",
            "text": "Aww don\`t click on me",
            "type": "BUTTON",
          },
        ],
        "id": "aEk4tPy1h5",
        "type": "MENU",
      },
      Object {
        "elements": Array [
          Object {
            "id": "bUk4tPy1h2",
            "type": "IMAGE",
            "url": "https://picsum.photos/300/150",
          },
          Object {
            "id": "bCk4tPy1h3",
            "text": "Hello!",
            "type": "TITLE",
          },
          Object {
            "id": "bEk4tPy1h1",
            "text": "Lorem Impsum...",
            "type": "TEXT",
          },
          Object {
            "id": "bNkm0hRAiE",
            "postback": "click-on-button-1",
            "text": "Click me!",
            "type": "BUTTON",
          },
          Object {
            "id": "bNkGJ6CAiN",
            "postback": "click-on-button-2",
            "text": "No click me!",
            "type": "BUTTON",
          },
          Object {
            "id": "bEyCyTRCi4",
            "postback": "click-on-button-3",
            "text": "Aww don\`t click on me",
            "type": "BUTTON",
          },
        ],
        "id": "bEk4tPy1h6",
        "type": "MENU",
      },
    ]
  }
  hideButtons={false}
  onClick={[Function]}
>
  <Gallery
    elements={
      Array [
        Object {
          "elements": Array [
            Object {
              "id": "Uk4tPy1h2",
              "type": "IMAGE",
              "url": "https://picsum.photos/300/150",
            },
            Object {
              "id": "Ck4tPy1h3",
              "text": "Hello!",
              "type": "TITLE",
            },
            Object {
              "id": "Ek4tPy1h1",
              "text": "Lorem Impsum...",
              "type": "TEXT",
            },
            Object {
              "id": "Nkm0hRAiE",
              "postback": "click-on-button-1",
              "text": "Click me!",
              "type": "BUTTON",
            },
            Object {
              "id": "NkGJ6CAiN",
              "postback": "click-on-button-2",
              "text": "No click me!",
              "type": "BUTTON",
            },
            Object {
              "id": "EyCyTRCi4",
              "postback": "click-on-button-3",
              "text": "Aww don\`t click on me",
              "type": "BUTTON",
            },
          ],
          "id": "Ek4tPy1h4",
          "type": "MENU",
        },
        Object {
          "elements": Array [
            Object {
              "id": "aUk4tPy1h2",
              "type": "IMAGE",
              "url": "https://picsum.photos/300/150",
            },
            Object {
              "id": "aCk4tPy1h3",
              "text": "Hello!",
              "type": "TITLE",
            },
            Object {
              "id": "aEk4tPy1h1",
              "text": "Lorem Impsum...",
              "type": "TEXT",
            },
            Object {
              "id": "aNkm0hRAiE",
              "postback": "click-on-button-1",
              "text": "Click me!",
              "type": "BUTTON",
            },
            Object {
              "id": "aNkGJ6CAiN",
              "postback": "click-on-button-2",
              "text": "No click me!",
              "type": "BUTTON",
            },
            Object {
              "id": "aEyCyTRCi4",
              "postback": "click-on-button-3",
              "text": "Aww don\`t click on me",
              "type": "BUTTON",
            },
          ],
          "id": "aEk4tPy1h5",
          "type": "MENU",
        },
        Object {
          "elements": Array [
            Object {
              "id": "bUk4tPy1h2",
              "type": "IMAGE",
              "url": "https://picsum.photos/300/150",
            },
            Object {
              "id": "bCk4tPy1h3",
              "text": "Hello!",
              "type": "TITLE",
            },
            Object {
              "id": "bEk4tPy1h1",
              "text": "Lorem Impsum...",
              "type": "TEXT",
            },
            Object {
              "id": "bNkm0hRAiE",
              "postback": "click-on-button-1",
              "text": "Click me!",
              "type": "BUTTON",
            },
            Object {
              "id": "bNkGJ6CAiN",
              "postback": "click-on-button-2",
              "text": "No click me!",
              "type": "BUTTON",
            },
            Object {
              "id": "bEyCyTRCi4",
              "postback": "click-on-button-3",
              "text": "Aww don\`t click on me",
              "type": "BUTTON",
            },
          ],
          "id": "bEk4tPy1h6",
          "type": "MENU",
        },
      ]
    }
    hideButtons={false}
    onClick={[Function]}
  >
    <div>
      <div>
        <ResizeDetector
          handleHeight={false}
          handleWidth={false}
          onResize={[Function]}
          refreshRate={1000}
          resizableElementId=""
          skipOnMount={false}
        >
          <div
            style={
              Object {
                "display": "none",
                "height": 0,
                "position": "absolute",
                "visibility": "hidden",
                "width": 0,
              }
            }
          />
        </ResizeDetector>
        <div
          key="Ek4tPy1h4"
        >
          <ComposedElement
            elements={
              Array [
                Object {
                  "id": "Uk4tPy1h2",
                  "type": "IMAGE",
                  "url": "https://picsum.photos/300/150",
                },
                Object {
                  "id": "Ck4tPy1h3",
                  "text": "Hello!",
                  "type": "TITLE",
                },
                Object {
                  "id": "Ek4tPy1h1",
                  "text": "Lorem Impsum...",
                  "type": "TEXT",
                },
                Object {
                  "id": "Nkm0hRAiE",
                  "postback": "click-on-button-1",
                  "text": "Click me!",
                  "type": "BUTTON",
                },
                Object {
                  "id": "NkGJ6CAiN",
                  "postback": "click-on-button-2",
                  "text": "No click me!",
                  "type": "BUTTON",
                },
                Object {
                  "id": "EyCyTRCi4",
                  "postback": "click-on-button-3",
                  "text": "Aww don\`t click on me",
                  "type": "BUTTON",
                },
              ]
            }
            hideButtons={false}
            onClick={[Function]}
          >
            <div>
              <Element
                hideButtons={false}
                id="Uk4tPy1h2"
                key="Uk4tPy1h2"
                onClick={[Function]}
                standalone={false}
                type="IMAGE"
                url="https://picsum.photos/300/150"
              >
                <Image
                  src="https://picsum.photos/300/150"
                >
                  <div>
                    <div>
                      <img
                        src="https://picsum.photos/300/150"
                      />
                    </div>
                  </div>
                </Image>
              </Element>
              <Element
                hideButtons={false}
                id="Ck4tPy1h3"
                key="Ck4tPy1h3"
                onClick={[Function]}
                standalone={false}
                text="Hello!"
                type="TITLE"
              >
                <Heading
                  content="Hello!"
                  level={1}
                >
                  <h1>
                    Hello!
                  </h1>
                </Heading>
              </Element>
              <Element
                hideButtons={false}
                id="Ek4tPy1h1"
                key="Ek4tPy1h1"
                onClick={[Function]}
                standalone={false}
                text="Lorem Impsum..."
                type="TEXT"
              >
                <Text
                  content="Lorem Impsum..."
                >
                  <p>
                    Lorem Impsum...
                  </p>
                </Text>
              </Element>
              <Element
                hideButtons={false}
                id="Nkm0hRAiE"
                key="Nkm0hRAiE"
                onClick={[Function]}
                postback="click-on-button-1"
                standalone={false}
                text="Click me!"
                type="BUTTON"
              >
                <Button
                  hideButtons={false}
                  id="Nkm0hRAiE"
                  label="Click me!"
                  onClick={[Function]}
                  postback="click-on-button-1"
                  standalone={false}
                  text="Click me!"
                  type="BUTTON"
                >
                  <div>
                    <button
                      onClick={[Function]}
                      title="Click me!"
                    >
                      Click me!
                    </button>
                  </div>
                </Button>
              </Element>
              <Element
                hideButtons={false}
                id="NkGJ6CAiN"
                key="NkGJ6CAiN"
                onClick={[Function]}
                postback="click-on-button-2"
                standalone={false}
                text="No click me!"
                type="BUTTON"
              >
                <Button
                  hideButtons={false}
                  id="NkGJ6CAiN"
                  label="No click me!"
                  onClick={[Function]}
                  postback="click-on-button-2"
                  standalone={false}
                  text="No click me!"
                  type="BUTTON"
                >
                  <div>
                    <button
                      onClick={[Function]}
                      title="No click me!"
                    >
                      No click me!
                    </button>
                  </div>
                </Button>
              </Element>
              <Element
                hideButtons={false}
                id="EyCyTRCi4"
                key="EyCyTRCi4"
                onClick={[Function]}
                postback="click-on-button-3"
                standalone={false}
                text="Aww don\`t click on me"
                type="BUTTON"
              >
                <Button
                  hideButtons={false}
                  id="EyCyTRCi4"
                  label="Aww don\`t click on me"
                  onClick={[Function]}
                  postback="click-on-button-3"
                  standalone={false}
                  text="Aww don\`t click on me"
                  type="BUTTON"
                >
                  <div>
                    <button
                      onClick={[Function]}
                      title="Aww don\`t click on me"
                    >
                      Aww don\`t click on me
                    </button>
                  </div>
                </Button>
              </Element>
            </div>
          </ComposedElement>
        </div>
        <div
          key="aEk4tPy1h5"
        >
          <ComposedElement
            elements={
              Array [
                Object {
                  "id": "aUk4tPy1h2",
                  "type": "IMAGE",
                  "url": "https://picsum.photos/300/150",
                },
                Object {
                  "id": "aCk4tPy1h3",
                  "text": "Hello!",
                  "type": "TITLE",
                },
                Object {
                  "id": "aEk4tPy1h1",
                  "text": "Lorem Impsum...",
                  "type": "TEXT",
                },
                Object {
                  "id": "aNkm0hRAiE",
                  "postback": "click-on-button-1",
                  "text": "Click me!",
                  "type": "BUTTON",
                },
                Object {
                  "id": "aNkGJ6CAiN",
                  "postback": "click-on-button-2",
                  "text": "No click me!",
                  "type": "BUTTON",
                },
                Object {
                  "id": "aEyCyTRCi4",
                  "postback": "click-on-button-3",
                  "text": "Aww don\`t click on me",
                  "type": "BUTTON",
                },
              ]
            }
            hideButtons={false}
            onClick={[Function]}
          >
            <div>
              <Element
                hideButtons={false}
                id="aUk4tPy1h2"
                key="aUk4tPy1h2"
                onClick={[Function]}
                standalone={false}
                type="IMAGE"
                url="https://picsum.photos/300/150"
              >
                <Image
                  src="https://picsum.photos/300/150"
                >
                  <div>
                    <div>
                      <img
                        src="https://picsum.photos/300/150"
                      />
                    </div>
                  </div>
                </Image>
              </Element>
              <Element
                hideButtons={false}
                id="aCk4tPy1h3"
                key="aCk4tPy1h3"
                onClick={[Function]}
                standalone={false}
                text="Hello!"
                type="TITLE"
              >
                <Heading
                  content="Hello!"
                  level={1}
                >
                  <h1>
                    Hello!
                  </h1>
                </Heading>
              </Element>
              <Element
                hideButtons={false}
                id="aEk4tPy1h1"
                key="aEk4tPy1h1"
                onClick={[Function]}
                standalone={false}
                text="Lorem Impsum..."
                type="TEXT"
              >
                <Text
                  content="Lorem Impsum..."
                >
                  <p>
                    Lorem Impsum...
                  </p>
                </Text>
              </Element>
              <Element
                hideButtons={false}
                id="aNkm0hRAiE"
                key="aNkm0hRAiE"
                onClick={[Function]}
                postback="click-on-button-1"
                standalone={false}
                text="Click me!"
                type="BUTTON"
              >
                <Button
                  hideButtons={false}
                  id="aNkm0hRAiE"
                  label="Click me!"
                  onClick={[Function]}
                  postback="click-on-button-1"
                  standalone={false}
                  text="Click me!"
                  type="BUTTON"
                >
                  <div>
                    <button
                      onClick={[Function]}
                      title="Click me!"
                    >
                      Click me!
                    </button>
                  </div>
                </Button>
              </Element>
              <Element
                hideButtons={false}
                id="aNkGJ6CAiN"
                key="aNkGJ6CAiN"
                onClick={[Function]}
                postback="click-on-button-2"
                standalone={false}
                text="No click me!"
                type="BUTTON"
              >
                <Button
                  hideButtons={false}
                  id="aNkGJ6CAiN"
                  label="No click me!"
                  onClick={[Function]}
                  postback="click-on-button-2"
                  standalone={false}
                  text="No click me!"
                  type="BUTTON"
                >
                  <div>
                    <button
                      onClick={[Function]}
                      title="No click me!"
                    >
                      No click me!
                    </button>
                  </div>
                </Button>
              </Element>
              <Element
                hideButtons={false}
                id="aEyCyTRCi4"
                key="aEyCyTRCi4"
                onClick={[Function]}
                postback="click-on-button-3"
                standalone={false}
                text="Aww don\`t click on me"
                type="BUTTON"
              >
                <Button
                  hideButtons={false}
                  id="aEyCyTRCi4"
                  label="Aww don\`t click on me"
                  onClick={[Function]}
                  postback="click-on-button-3"
                  standalone={false}
                  text="Aww don\`t click on me"
                  type="BUTTON"
                >
                  <div>
                    <button
                      onClick={[Function]}
                      title="Aww don\`t click on me"
                    >
                      Aww don\`t click on me
                    </button>
                  </div>
                </Button>
              </Element>
            </div>
          </ComposedElement>
        </div>
        <div
          key="bEk4tPy1h6"
        >
          <ComposedElement
            elements={
              Array [
                Object {
                  "id": "bUk4tPy1h2",
                  "type": "IMAGE",
                  "url": "https://picsum.photos/300/150",
                },
                Object {
                  "id": "bCk4tPy1h3",
                  "text": "Hello!",
                  "type": "TITLE",
                },
                Object {
                  "id": "bEk4tPy1h1",
                  "text": "Lorem Impsum...",
                  "type": "TEXT",
                },
                Object {
                  "id": "bNkm0hRAiE",
                  "postback": "click-on-button-1",
                  "text": "Click me!",
                  "type": "BUTTON",
                },
                Object {
                  "id": "bNkGJ6CAiN",
                  "postback": "click-on-button-2",
                  "text": "No click me!",
                  "type": "BUTTON",
                },
                Object {
                  "id": "bEyCyTRCi4",
                  "postback": "click-on-button-3",
                  "text": "Aww don\`t click on me",
                  "type": "BUTTON",
                },
              ]
            }
            hideButtons={false}
            onClick={[Function]}
          >
            <div>
              <Element
                hideButtons={false}
                id="bUk4tPy1h2"
                key="bUk4tPy1h2"
                onClick={[Function]}
                standalone={false}
                type="IMAGE"
                url="https://picsum.photos/300/150"
              >
                <Image
                  src="https://picsum.photos/300/150"
                >
                  <div>
                    <div>
                      <img
                        src="https://picsum.photos/300/150"
                      />
                    </div>
                  </div>
                </Image>
              </Element>
              <Element
                hideButtons={false}
                id="bCk4tPy1h3"
                key="bCk4tPy1h3"
                onClick={[Function]}
                standalone={false}
                text="Hello!"
                type="TITLE"
              >
                <Heading
                  content="Hello!"
                  level={1}
                >
                  <h1>
                    Hello!
                  </h1>
                </Heading>
              </Element>
              <Element
                hideButtons={false}
                id="bEk4tPy1h1"
                key="bEk4tPy1h1"
                onClick={[Function]}
                standalone={false}
                text="Lorem Impsum..."
                type="TEXT"
              >
                <Text
                  content="Lorem Impsum..."
                >
                  <p>
                    Lorem Impsum...
                  </p>
                </Text>
              </Element>
              <Element
                hideButtons={false}
                id="bNkm0hRAiE"
                key="bNkm0hRAiE"
                onClick={[Function]}
                postback="click-on-button-1"
                standalone={false}
                text="Click me!"
                type="BUTTON"
              >
                <Button
                  hideButtons={false}
                  id="bNkm0hRAiE"
                  label="Click me!"
                  onClick={[Function]}
                  postback="click-on-button-1"
                  standalone={false}
                  text="Click me!"
                  type="BUTTON"
                >
                  <div>
                    <button
                      onClick={[Function]}
                      title="Click me!"
                    >
                      Click me!
                    </button>
                  </div>
                </Button>
              </Element>
              <Element
                hideButtons={false}
                id="bNkGJ6CAiN"
                key="bNkGJ6CAiN"
                onClick={[Function]}
                postback="click-on-button-2"
                standalone={false}
                text="No click me!"
                type="BUTTON"
              >
                <Button
                  hideButtons={false}
                  id="bNkGJ6CAiN"
                  label="No click me!"
                  onClick={[Function]}
                  postback="click-on-button-2"
                  standalone={false}
                  text="No click me!"
                  type="BUTTON"
                >
                  <div>
                    <button
                      onClick={[Function]}
                      title="No click me!"
                    >
                      No click me!
                    </button>
                  </div>
                </Button>
              </Element>
              <Element
                hideButtons={false}
                id="bEyCyTRCi4"
                key="bEyCyTRCi4"
                onClick={[Function]}
                postback="click-on-button-3"
                standalone={false}
                text="Aww don\`t click on me"
                type="BUTTON"
              >
                <Button
                  hideButtons={false}
                  id="bEyCyTRCi4"
                  label="Aww don\`t click on me"
                  onClick={[Function]}
                  postback="click-on-button-3"
                  standalone={false}
                  text="Aww don\`t click on me"
                  type="BUTTON"
                >
                  <div>
                    <button
                      onClick={[Function]}
                      title="Aww don\`t click on me"
                    >
                      Aww don\`t click on me
                    </button>
                  </div>
                </Button>
              </Element>
            </div>
          </ComposedElement>
        </div>
      </div>
    </div>
  </Gallery>
</PluginWrapper>
`;

exports[`Plugin index should render raw element inside plugin 1`] = `
<PluginWrapper
  disableCarusel={false}
  elements={
    Array [
      Object {
        "elements": Array [
          Object {
            "id": "Uk4tPy1h2",
            "type": "IMAGE",
            "url": "https://picsum.photos/300/150",
          },
          Object {
            "id": "Ck4tPy1h3",
            "text": "Hello!",
            "type": "TITLE",
          },
          Object {
            "id": "Ek4tPy1h1",
            "text": "Lorem Impsum...",
            "type": "TEXT",
          },
          Object {
            "id": "Nkm0hRAiE",
            "postback": "click-on-button-1",
            "text": "Click me!",
            "type": "BUTTON",
          },
          Object {
            "id": "NkGJ6CAiN",
            "postback": "click-on-button-2",
            "text": "No click me!",
            "type": "BUTTON",
          },
          Object {
            "id": "EyCyTRCi4",
            "postback": "click-on-button-3",
            "text": "Aww don\`t click on me",
            "type": "BUTTON",
          },
        ],
        "id": "Ek4tPy1h4",
        "type": "MENU",
      },
    ]
  }
  hideButtons={false}
  onClick={[Function]}
  width="100%"
>
  <Plugin
    elements={
      Array [
        Object {
          "elements": Array [
            Object {
              "id": "Uk4tPy1h2",
              "type": "IMAGE",
              "url": "https://picsum.photos/300/150",
            },
            Object {
              "id": "Ck4tPy1h3",
              "text": "Hello!",
              "type": "TITLE",
            },
            Object {
              "id": "Ek4tPy1h1",
              "text": "Lorem Impsum...",
              "type": "TEXT",
            },
            Object {
              "id": "Nkm0hRAiE",
              "postback": "click-on-button-1",
              "text": "Click me!",
              "type": "BUTTON",
            },
            Object {
              "id": "NkGJ6CAiN",
              "postback": "click-on-button-2",
              "text": "No click me!",
              "type": "BUTTON",
            },
            Object {
              "id": "EyCyTRCi4",
              "postback": "click-on-button-3",
              "text": "Aww don\`t click on me",
              "type": "BUTTON",
            },
          ],
          "id": "Ek4tPy1h4",
          "type": "MENU",
        },
      ]
    }
    hideButtons={false}
    level={1}
    onClick={[Function]}
    width="100%"
  >
    <div>
      <div>
        <div
          style={
            Object {
              "width": "100%",
            }
          }
        >
          <ComposedElement
            elements={
              Array [
                Object {
                  "elements": Array [
                    Object {
                      "id": "Uk4tPy1h2",
                      "type": "IMAGE",
                      "url": "https://picsum.photos/300/150",
                    },
                    Object {
                      "id": "Ck4tPy1h3",
                      "text": "Hello!",
                      "type": "TITLE",
                    },
                    Object {
                      "id": "Ek4tPy1h1",
                      "text": "Lorem Impsum...",
                      "type": "TEXT",
                    },
                    Object {
                      "id": "Nkm0hRAiE",
                      "postback": "click-on-button-1",
                      "text": "Click me!",
                      "type": "BUTTON",
                    },
                    Object {
                      "id": "NkGJ6CAiN",
                      "postback": "click-on-button-2",
                      "text": "No click me!",
                      "type": "BUTTON",
                    },
                    Object {
                      "id": "EyCyTRCi4",
                      "postback": "click-on-button-3",
                      "text": "Aww don\`t click on me",
                      "type": "BUTTON",
                    },
                  ],
                  "id": "Ek4tPy1h4",
                  "type": "MENU",
                },
              ]
            }
            hideButtons={false}
            level={1}
            onClick={[Function]}
            width="100%"
          >
            <div>
              <Element
                elements={
                  Array [
                    Object {
                      "id": "Uk4tPy1h2",
                      "type": "IMAGE",
                      "url": "https://picsum.photos/300/150",
                    },
                    Object {
                      "id": "Ck4tPy1h3",
                      "text": "Hello!",
                      "type": "TITLE",
                    },
                    Object {
                      "id": "Ek4tPy1h1",
                      "text": "Lorem Impsum...",
                      "type": "TEXT",
                    },
                    Object {
                      "id": "Nkm0hRAiE",
                      "postback": "click-on-button-1",
                      "text": "Click me!",
                      "type": "BUTTON",
                    },
                    Object {
                      "id": "NkGJ6CAiN",
                      "postback": "click-on-button-2",
                      "text": "No click me!",
                      "type": "BUTTON",
                    },
                    Object {
                      "id": "EyCyTRCi4",
                      "postback": "click-on-button-3",
                      "text": "Aww don\`t click on me",
                      "type": "BUTTON",
                    },
                  ]
                }
                hideButtons={false}
                id="Ek4tPy1h4"
                key="Ek4tPy1h4"
                level={1}
                onClick={[Function]}
                standalone={true}
                type="MENU"
                width="100%"
              >
                <ComposedElement
                  elements={
                    Array [
                      Object {
                        "id": "Uk4tPy1h2",
                        "type": "IMAGE",
                        "url": "https://picsum.photos/300/150",
                      },
                      Object {
                        "id": "Ck4tPy1h3",
                        "text": "Hello!",
                        "type": "TITLE",
                      },
                      Object {
                        "id": "Ek4tPy1h1",
                        "text": "Lorem Impsum...",
                        "type": "TEXT",
                      },
                      Object {
                        "id": "Nkm0hRAiE",
                        "postback": "click-on-button-1",
                        "text": "Click me!",
                        "type": "BUTTON",
                      },
                      Object {
                        "id": "NkGJ6CAiN",
                        "postback": "click-on-button-2",
                        "text": "No click me!",
                        "type": "BUTTON",
                      },
                      Object {
                        "id": "EyCyTRCi4",
                        "postback": "click-on-button-3",
                        "text": "Aww don\`t click on me",
                        "type": "BUTTON",
                      },
                    ]
                  }
                  hideButtons={false}
                  id="Ek4tPy1h4"
                  level={2}
                  onClick={[Function]}
                  showTextAsMessage={false}
                  standalone={true}
                  type="MENU"
                  width="100%"
                >
                  <div>
                    <Element
                      hideButtons={false}
                      id="Ek4tPy1h4"
                      key="Uk4tPy1h2"
                      level={2}
                      onClick={[Function]}
                      showTextAsMessage={false}
                      standalone={true}
                      type="IMAGE"
                      url="https://picsum.photos/300/150"
                      width="100%"
                    >
                      <Image
                        src="https://picsum.photos/300/150"
                      >
                        <div>
                          <div>
                            <img
                              src="https://picsum.photos/300/150"
                            />
                          </div>
                        </div>
                      </Image>
                    </Element>
                    <Element
                      hideButtons={false}
                      id="Ek4tPy1h4"
                      key="Ck4tPy1h3"
                      level={2}
                      onClick={[Function]}
                      showTextAsMessage={false}
                      standalone={true}
                      text="Hello!"
                      type="TITLE"
                      width="100%"
                    >
                      <Heading
                        content="Hello!"
                        level={1}
                      >
                        <h1>
                          Hello!
                        </h1>
                      </Heading>
                    </Element>
                    <Element
                      hideButtons={false}
                      id="Ek4tPy1h4"
                      key="Ek4tPy1h1"
                      level={2}
                      onClick={[Function]}
                      showTextAsMessage={false}
                      standalone={true}
                      text="Lorem Impsum..."
                      type="TEXT"
                      width="100%"
                    >
                      <Text
                        content="Lorem Impsum..."
                        showAsMessage={false}
                      >
                        <p>
                          Lorem Impsum...
                        </p>
                      </Text>
                    </Element>
                    <Element
                      hideButtons={false}
                      id="Ek4tPy1h4"
                      key="Nkm0hRAiE"
                      level={2}
                      onClick={[Function]}
                      postback="click-on-button-1"
                      showTextAsMessage={false}
                      standalone={true}
                      text="Click me!"
                      type="BUTTON"
                      width="100%"
                    >
                      <Button
                        hideButtons={false}
                        id="Ek4tPy1h4"
                        label="Click me!"
                        level={2}
                        onClick={[Function]}
                        postback="click-on-button-1"
                        showTextAsMessage={false}
                        standalone={true}
                        text="Click me!"
                        type="BUTTON"
                        width="100%"
                      >
                        <div>
                          <button
                            onClick={[Function]}
                            title="Click me!"
                          >
                            Click me!
                          </button>
                        </div>
                      </Button>
                    </Element>
                    <Element
                      hideButtons={false}
                      id="Ek4tPy1h4"
                      key="NkGJ6CAiN"
                      level={2}
                      onClick={[Function]}
                      postback="click-on-button-2"
                      showTextAsMessage={false}
                      standalone={true}
                      text="No click me!"
                      type="BUTTON"
                      width="100%"
                    >
                      <Button
                        hideButtons={false}
                        id="Ek4tPy1h4"
                        label="No click me!"
                        level={2}
                        onClick={[Function]}
                        postback="click-on-button-2"
                        showTextAsMessage={false}
                        standalone={true}
                        text="No click me!"
                        type="BUTTON"
                        width="100%"
                      >
                        <div>
                          <button
                            onClick={[Function]}
                            title="No click me!"
                          >
                            No click me!
                          </button>
                        </div>
                      </Button>
                    </Element>
                    <Element
                      hideButtons={false}
                      id="Ek4tPy1h4"
                      key="EyCyTRCi4"
                      level={2}
                      onClick={[Function]}
                      postback="click-on-button-3"
                      showTextAsMessage={false}
                      standalone={true}
                      text="Aww don\`t click on me"
                      type="BUTTON"
                      width="100%"
                    >
                      <Button
                        hideButtons={false}
                        id="Ek4tPy1h4"
                        label="Aww don\`t click on me"
                        level={2}
                        onClick={[Function]}
                        postback="click-on-button-3"
                        showTextAsMessage={false}
                        standalone={true}
                        text="Aww don\`t click on me"
                        type="BUTTON"
                        width="100%"
                      >
                        <div>
                          <button
                            onClick={[Function]}
                            title="Aww don\`t click on me"
                          >
                            Aww don\`t click on me
                          </button>
                        </div>
                      </Button>
                    </Element>
                  </div>
                </ComposedElement>
              </Element>
            </div>
          </ComposedElement>
        </div>
      </div>
    </div>
  </Plugin>
</PluginWrapper>
`;

exports[`Plugin index should render standalone plugin 1`] = `
<PluginWrapper
  disableCarusel={false}
  elements={
    Array [
      Object {
        "elements": Array [
          Object {
            "id": "Uk4tPy1h2",
            "type": "IMAGE",
            "url": "https://picsum.photos/300/150",
          },
          Object {
            "id": "Ck4tPy1h3",
            "text": "Hello!",
            "type": "TITLE",
          },
          Object {
            "id": "Ek4tPy1h1",
            "text": "Lorem Impsum...",
            "type": "TEXT",
          },
          Object {
            "id": "Nkm0hRAiE",
            "postback": "click-on-button-1",
            "text": "Click me!",
            "type": "BUTTON",
          },
          Object {
            "id": "NkGJ6CAiN",
            "postback": "click-on-button-2",
            "text": "No click me!",
            "type": "BUTTON",
          },
          Object {
            "id": "EyCyTRCi4",
            "postback": "click-on-button-3",
            "text": "Aww don\`t click on me",
            "type": "BUTTON",
          },
        ],
        "id": "Ek4tPy1h4",
        "type": "QUICK_REPLIES",
      },
    ]
  }
  hideButtons={false}
  onClick={[Function]}
>
  <div>
    <ComposedElement
      elements={
        Array [
          Object {
            "elements": Array [
              Object {
                "id": "Uk4tPy1h2",
                "type": "IMAGE",
                "url": "https://picsum.photos/300/150",
              },
              Object {
                "id": "Ck4tPy1h3",
                "text": "Hello!",
                "type": "TITLE",
              },
              Object {
                "id": "Ek4tPy1h1",
                "text": "Lorem Impsum...",
                "type": "TEXT",
              },
              Object {
                "id": "Nkm0hRAiE",
                "postback": "click-on-button-1",
                "text": "Click me!",
                "type": "BUTTON",
              },
              Object {
                "id": "NkGJ6CAiN",
                "postback": "click-on-button-2",
                "text": "No click me!",
                "type": "BUTTON",
              },
              Object {
                "id": "EyCyTRCi4",
                "postback": "click-on-button-3",
                "text": "Aww don\`t click on me",
                "type": "BUTTON",
              },
            ],
            "id": "Ek4tPy1h4",
            "type": "QUICK_REPLIES",
          },
        ]
      }
      hideButtons={false}
      level={1}
      onClick={[Function]}
    >
      <div>
        <Element
          elements={
            Array [
              Object {
                "id": "Uk4tPy1h2",
                "type": "IMAGE",
                "url": "https://picsum.photos/300/150",
              },
              Object {
                "id": "Ck4tPy1h3",
                "text": "Hello!",
                "type": "TITLE",
              },
              Object {
                "id": "Ek4tPy1h1",
                "text": "Lorem Impsum...",
                "type": "TEXT",
              },
              Object {
                "id": "Nkm0hRAiE",
                "postback": "click-on-button-1",
                "text": "Click me!",
                "type": "BUTTON",
              },
              Object {
                "id": "NkGJ6CAiN",
                "postback": "click-on-button-2",
                "text": "No click me!",
                "type": "BUTTON",
              },
              Object {
                "id": "EyCyTRCi4",
                "postback": "click-on-button-3",
                "text": "Aww don\`t click on me",
                "type": "BUTTON",
              },
            ]
          }
          hideButtons={false}
          id="Ek4tPy1h4"
          key="Ek4tPy1h4"
          level={1}
          onClick={[Function]}
          standalone={true}
          type="QUICK_REPLIES"
        >
          <QuickReplies
            elements={
              Array [
                Object {
                  "id": "Uk4tPy1h2",
                  "type": "IMAGE",
                  "url": "https://picsum.photos/300/150",
                },
                Object {
                  "id": "Ck4tPy1h3",
                  "text": "Hello!",
                  "type": "TITLE",
                },
                Object {
                  "id": "Ek4tPy1h1",
                  "text": "Lorem Impsum...",
                  "type": "TEXT",
                },
                Object {
                  "id": "Nkm0hRAiE",
                  "postback": "click-on-button-1",
                  "text": "Click me!",
                  "type": "BUTTON",
                },
                Object {
                  "id": "NkGJ6CAiN",
                  "postback": "click-on-button-2",
                  "text": "No click me!",
                  "type": "BUTTON",
                },
                Object {
                  "id": "EyCyTRCi4",
                  "postback": "click-on-button-3",
                  "text": "Aww don\`t click on me",
                  "type": "BUTTON",
                },
              ]
            }
            hideButtons={false}
            id="Ek4tPy1h4"
            level={1}
            onClick={[Function]}
            standalone={true}
            type="QUICK_REPLIES"
          >
            <div>
              <div>
                <Bubble
                  text="Lorem Impsum..."
                >
                  <div>
                    Lorem Impsum...
                  </div>
                </Bubble>
              </div>
              <div>
                <button
                  key="Nkm0hRAiE"
                  onClick={[Function]}
                  title="Click me!"
                >
                  Click me!
                </button>
                <button
                  key="NkGJ6CAiN"
                  onClick={[Function]}
                  title="No click me!"
                >
                  No click me!
                </button>
                <button
                  key="EyCyTRCi4"
                  onClick={[Function]}
                  title="Aww don\`t click on me"
                >
                  Aww don\`t click on me
                </button>
              </div>
            </div>
          </QuickReplies>
        </Element>
      </div>
    </ComposedElement>
  </div>
</PluginWrapper>
`;
